--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
-    <artifactId>T-Systems-java-school</artifactId>
+    <groupId>com.tsystems.javaschool</groupId>
+    <artifactId>eCare</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+    <properties>
+        <spring.version>4.2.6.RELEASE</spring.version>
+        <servlet.version>3.1.0</servlet.version>
+    </properties>
 
-    
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>8.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
