--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5434/eCareDB
 spring.datasource.username=postgres
 spring.datasource.password=root
+#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+hibernate.hbm2ddl.auto=none
+
+broker.url = tcp://172.17.0.1:61616
+broker.username = admin
+broker.password = admin
+queue.name = QUEUE
