--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.0.pr3</version>
+        </dependency>
     </dependencies>
 
 </project>
