--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,16 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.10.0.pr3</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
 </project>
