--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=root
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.hbm2ddl.auto=none
 
-broker.url = tcp://172.17.0.1:61616
+broker.url = tcp://localhost:61616
 broker.username = admin
 broker.password = admin
 queue.name = QUEUE
